[package]
name = "seek-local"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = [ "macros", "rt-multi-thread", "fs" ] }
axum = { version = "0.8.1", features = [ "macros" ] }
serde = { version = "1.0.217", features = [ "derive" ] }
thiserror = "2.0.11"
reqwest = "0.12.12"
tower = "0.5.2"
figment = "0.10.19"
tempdir = "0.3.7"
hyper = "1.6.0"